# AURA.CORE

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
source/: AURA.cpp  AURA.h  placeholder.cpp
source/Window/: Window.cpp  Window.h
